# metaprogramming-execise

./: EMAIL_TASK.md  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  lint.yml  tests.yml
docs/: conf.py  index.rst  metaprogramming_exercise.rst  modules.rst
metaprogramming_exercise/: main.py
test/: main_test.py
